<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/music_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical"
    android:paddingLeft="64dp"
    android:paddingTop="34dp"
    android:paddingRight="64dp"
    android:paddingBottom="56dp">

    <FrameLayout
        android:id="@+id/music_top_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="start|top"
            android:contentDescription="@string/music_back"
            android:src="@mipmap/music_back" />

        <LinearLayout
            android:id="@+id/top_actions"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="end|top"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlist_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/music_playlist"
                android:src="@mipmap/music_playlist" />

            <Space
                android:id="@+id/top_action_gap"
                android:layout_width="36dp"
                android:layout_height="1dp" />

            <ImageView
                android:id="@+id/disc_mode_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/music_disc_mode"
                android:src="@mipmap/music_disc_mode" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/music_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.hivi.launcher.customview.RecordView
            android:id="@+id/record_view"
            android:layout_width="430dp"
            android:layout_height="430dp"
            android:background="@drawable/music_turntable_background" />

        <LinearLayout
            android:id="@+id/music_info_panel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="78dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/music_default_title"
                android:textColor="#FFFFFFFF"
                android:textSize="58sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/artist_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/music_default_artist"
                android:textColor="#FFBDBDBD"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/lyric_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="54dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/music_default_lyric"
                android:textColor="#FFFFFFFF"
                android:textSize="40sp" />

            <LinearLayout
                android:id="@+id/control_row"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="56dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/previous_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/music_previous"
                    android:src="@drawable/ic_music_previous" />

                <Space
                    android:id="@+id/previous_play_gap"
                    android:layout_width="110dp"
                    android:layout_height="1dp" />

                <FrameLayout
                    android:id="@+id/play_button"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:background="@drawable/music_circle_button"
                    android:clickable="true"
                    android:focusable="true">

                    <ImageView
                        android:id="@+id/play_state_icon"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/music_play_pause"
                        android:src="@mipmap/music_play" />
                </FrameLayout>

                <Space
                    android:id="@+id/play_next_gap"
                    android:layout_width="110dp"
                    android:layout_height="1dp" />

                <ImageView
                    android:id="@+id/next_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/music_next"
                    android:src="@drawable/ic_music_next" />

                <Space
                    android:id="@+id/next_volume_gap"
                    android:layout_width="95dp"
                    android:layout_height="1dp" />

                <ImageView
                    android:id="@+id/volume_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/music_volume"
                    android:src="@drawable/ic_music_volume" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <SeekBar
        android:id="@+id/progress_seek_bar"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:max="1000"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:progress="322"
        android:progressDrawable="@drawable/music_seek_progress"
        android:thumb="@drawable/music_seek_thumb" />

    <FrameLayout
        android:id="@+id/time_row"
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:id="@+id/current_time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="01:35"
            android:textColor="#FFBDBDBD"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/remaining_time_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:includeFontPadding="false"
            android:text="−03:20"
            android:textColor="#FFBDBDBD"
            android:textSize="32sp" />
    </FrameLayout>
</LinearLayout>
